Bug 291252 - Wrong dialog for adding a bookmark
Summary: Wrong dialog for adding a bookmark
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Share Like Connect (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: unscheduled
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-11 10:22 UTC by Javier Llorente
Modified: 2012-03-14 22:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Javier Llorente 2012-01-11 10:22:24 UTC
Version:           unspecified
OS:                Linux

Tapping on add a bookmark shows the wrong dialog; it asks you if you want to delete it (see actual results for more info). Furthermore, the second time you tap on the heart, the bookmark menu isn't shown (paint issue - menu it's completely transparent), but this is a different issue.
Tested on 2012-01-10-09-09-basyskom-plasma-active-devel-meego-usb-live.is

Reproducible: Didn't try

Steps to Reproduce:
1. Open the Active Web Browser
2. Go to a website that is not part of your bookmarks
3. Tap on the heart
4. Tap on add bookmark
5. Observe the dialog

Actual Results:  
A dialog with the following text is shown:  "Are you sure to delete this bookmark? All of its associations with activities will be removed as well." 
Tapping on yes or no doesn't bookmark the website.

Expected Results:  
I haven't bookmarked it yet and I already want to delete it? ;)
Comment 1 Lamarque V. Souza 2012-03-13 21:28:24 UTC
This should be fixed by commits:

http://commits.kde.org/share-like-connect/bffda4e7ff09d80ea92418d4c182afdb651674b5

and 

http://commits.kde.org/share-like-connect/2f85a9d5baaaf83b72924318561f05a661007605

There is still a problem that active-webrowser does not update the bookmarks list once the bookmark is removed. That is a pending implemenation.
Comment 2 Lamarque V. Souza 2012-03-14 22:33:39 UTC
Git commit 480fc1e2387e0f4c70f571b2b1d4fdc660a3d6f8 by Lamarque V. Souza.
Committed on 14/03/2012 at 23:32.
Pushed by lvsouza into branch 'master'.

Implement deleting bookmarks in active-webbrowser.

M  +6    -1    applications/webbrowser/src/completionitem.cpp
M  +1    -0    applications/webbrowser/src/completionitem.h
M  +21   -6    applications/webbrowser/src/completionmodel.cpp

http://commits.kde.org/plasma-mobile/480fc1e2387e0f4c70f571b2b1d4fdc660a3d6f8