Implement deleting bookmarks in active-webbrowser.

BUG: 291252